--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all",
   "printWidth": 100,
+  "trailingComma": "all",
   "tabWidth": 2,
-  "semi": false
+  "semi": false,
+  "singleQuote": true
 }
