--- a/package.json
+++ b/package.json
@@ -36,6 +36,14 @@
     ]
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "^7.21.5",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0",
     "redux-mock-store": "^1.5.4"
   }
 }
