--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-minimal-pie-chart": "^8.1.0",
     "react-notifications": "^1.7.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
@@ -17,6 +18,8 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "sockjs-client": "^1.1.5",
+    "stompjs": "^2.3.3",
     "swiper": "^6.4.5"
   },
   "scripts": {
