--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "redux-thunk": "^2.3.0",
     "sockjs-client": "^1.1.5",
     "stompjs": "^2.3.3",
-    "swiper": "^6.4.5"
+    "swiper": "^6.4.5",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
