--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "firebase": "^8.2.1",
     "jquery": "^3.5.1",
     "react": "^17.0.1",
+    "react-app-polyfill": "^2.0.0",
     "react-bootstrap": "^1.4.0",
+    "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
     "react-minimal-pie-chart": "^8.1.0",
     "react-notifications": "^1.7.2",
@@ -42,6 +44,7 @@
       "not op_mini all"
     ],
     "development": [
+      "ie 11",
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
