--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jquery": "^3.5.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
     "react-minimal-pie-chart": "^8.1.0",
     "react-notifications": "^1.7.2",
